--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,13 +15,13 @@
 		"**/.github": true
 	},
 	"workbench.colorCustomizations": {
-		"titleBar.activeBackground": "#030140", // barra superior
-		"activityBar.background": "#8C7C6D", // barra lateral
-		"statusBar.background": "#cf3554", // barra inferior
-		"activityBar.activeBorder": "#030140", // borde de elemento seleccionado
-		"activityBar.foreground": "#030140", // color de los iconos (activos)
+		"titleBar.activeBackground": "#011c40", // barra superior
+		"activityBar.background": "#011c40", // barra lateral
+		"statusBar.background": "#011c40", // barra inferior
+		"activityBar.activeBorder": "#011c40", // borde de elemento seleccionado
+		"activityBar.foreground": "#cf3554", // color de los iconos (activos)
 		"activityBar.inactiveForeground": "#e7e7e799", // color de los iconos (inactivos)
-		"activityBarBadge.background": "#cf3554", // color de las notificaciones (circulito al lado de icono)
+		"activityBarBadge.background": "#011c40", // color de las notificaciones (circulito al lado de icono)
 		"activityBarBadge.foreground": "#e7e7e7", // color de los iconos de las notificaciones
 		"titleBar.activeForeground": "#e7e7e7", // color fuente textos (activos)
 		"titleBar.inactiveForeground": "#e7e7e7", // color fuente textos (inactivos)
